--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,7 +11,7 @@
         android:id="@+id/activity_register"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".usuario.gui.RegisterActivity">
+        tools:context=".usuario.gui.HomeActivity">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
