--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -145,6 +145,19 @@
             android:layout_alignBottom="@+id/textViewBiografia"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            app:fabSize="normal"
+            android:onClick="chamarEditarPerfil"
+            app:srcCompat="@android:drawable/ic_menu_edit"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="19dp"
+            android:id="@+id/floatingActionButton"
+            app:backgroundTint="#7bc8f3"
+            android:layout_toRightOf="@+id/textViewAvaliadores" />
     </RelativeLayout>
     </ScrollView>
 </android.support.design.widget.CoordinatorLayout>
