coisa pra caralho

--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -11,7 +11,7 @@
         android:id="@+id/activity_editar_perfil"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="ufrpe.edu.learnit.perfil.gui.EditarPerfil">
+        tools:context="ufrpe.edu.learnit.perfil.gui.EditarPerfilActivity">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
