--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -107,15 +107,6 @@
             android:layout_alignLeft="@+id/textViewAulaOferecida1"
             android:layout_alignStart="@+id/textViewAulaOferecida1" />
 
-        <TextView android:text="0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:id="@+id/textViewHoras"
-            android:layout_below="@+id/textView6"
-            android:layout_alignRight="@+id/textViewNome"
-            android:layout_alignEnd="@+id/textViewNome" />
-
         <TextView android:text="Nota 0,0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -158,6 +149,15 @@
             android:id="@+id/floatingActionButton"
             app:backgroundTint="#7bc8f3"
             android:layout_toRightOf="@+id/textViewAvaliadores" />
+
+        <TextView android:text="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:id="@+id/textViewHoras"
+            android:layout_below="@+id/textView6"
+            android:layout_alignLeft="@+id/textViewAvaliadores"
+            android:layout_alignStart="@+id/textViewAvaliadores" />
     </RelativeLayout>
     </ScrollView>
 </android.support.design.widget.CoordinatorLayout>
