--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -20,16 +20,6 @@
             android:background="#7bc8f3"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <TextView
-            android:text="Editar Perfil"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView4"
-            android:textSize="36sp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:textColor="@android:color/background_light" />
-
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -99,8 +89,19 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_marginBottom="43dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
+
+        <TextView
+            android:text="Editar Perfil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView4"
+            android:textSize="36sp"
+            android:textColor="@android:color/background_light"
+            android:layout_above="@+id/editText5"
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 </ScrollView>
