--- a/app/src/main/res/layout/activity_interesses.xml
+++ b/app/src/main/res/layout/activity_interesses.xml
@@ -99,6 +99,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_marginBottom="26dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
