--- a/app/src/main/res/layout/activity_cadastrar_aula.xml
+++ b/app/src/main/res/layout/activity_cadastrar_aula.xml
@@ -84,6 +84,7 @@
             android:layout_marginBottom="92dp"
             android:layout_alignBottom="@+id/button5"
             android:layout_alignParentLeft="true"
+            android:layout_below="@+id/spinner"
             android:layout_alignParentStart="true" />
 
         <TextView
@@ -101,7 +102,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/spinner2"
             android:layout_marginBottom="29dp"
-            android:layout_above="@+id/editText11"
+            android:layout_below="@+id/spinner"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -110,7 +111,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/spinner"
             android:layout_marginBottom="12dp"
-            android:layout_above="@+id/spinner2"
+            android:layout_below="@+id/textView3"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
