--- a/app/src/main/res/layout/activity_interesses.xml
+++ b/app/src/main/res/layout/activity_interesses.xml
@@ -96,10 +96,9 @@
             android:background="#7bc8f3"
             android:textColor="@android:color/background_light"
             android:onClick="confirmar"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/spinner2"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="26dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
