--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -86,10 +86,9 @@
             android:background="#7bc8f3"
             android:textColor="@android:color/background_light"
             android:onClick="confirmar"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/spinner2"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="43dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
