--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,47 +32,6 @@
                 android:visibility="invisible"
                 android:textColor="@android:color/background_light" />
 
-            <Button
-                android:text="Fazer Logoff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/button2"
-                android:background="#7bc8f3"
-                android:layout_marginBottom="24dp"
-                android:textColor="@android:color/background_light"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:onClick="fazerLogoff"/>
-
-        <Button
-            android:text="MEU PERFIL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/button2"
-            android:layout_marginBottom="78dp"
-            android:id="@+id/button3"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:background="#7bc8f3"
-            android:textColor="@android:color/background_light"
-            android:onClick="chamarPerfil"/>
-
-        <Button
-            android:text="Cadastrar Aula"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/button4"
-            android:background="#7bc8f3"
-            android:textColor="@android:color/background_light"
-            android:onClick="chamarCadastrarAula"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -81,6 +40,51 @@
             android:layout_marginTop="46dp"
             android:id="@+id/textView5"
             android:textSize="27sp" />
+
+        <Button
+            android:text="Cadastrar Aula"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button4"
+            android:background="#7bc8f3"
+            android:textColor="@android:color/background_light"
+            android:onClick="chamarCadastrarAula"
+            android:layout_alignTop="@+id/textView5"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="16dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <Button
+            android:text="MEU PERFIL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button3"
+            android:background="#7bc8f3"
+            android:textColor="@android:color/background_light"
+            android:onClick="chamarPerfil"
+            android:layout_below="@+id/button4"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="23dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <Button
+            android:text="Fazer Logoff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button2"
+            android:background="#7bc8f3"
+            android:textColor="@android:color/background_light"
+            android:onClick="fazerLogoff"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="39dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
     </ScrollView>
