--- a/app/src/main/res/layout/activity_cadastrar_aula.xml
+++ b/app/src/main/res/layout/activity_cadastrar_aula.xml
@@ -26,7 +26,8 @@
             android:id="@+id/textView7"
             android:textSize="30sp"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:textColor="@android:color/background_light" />
 
         <Button
             android:text="cadastrar"
