--- a/app/src/main/res/layout/activity_aula_professor.xml
+++ b/app/src/main/res/layout/activity_aula_professor.xml
@@ -117,7 +117,9 @@
             android:layout_toRightOf="@+id/editText11"
             android:layout_toEndOf="@+id/editText11"
             android:layout_marginLeft="28dp"
-            android:layout_marginStart="28dp" />
+            android:layout_marginStart="28dp"
+            app:backgroundTint="#7bc8f3"
+            android:tint="@android:color/background_light" />
 
         <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
@@ -126,12 +128,13 @@
             app:fabSize="normal"
             app:srcCompat="@android:drawable/ic_menu_edit"
             android:id="@+id/floatingActionButton8"
-            android:tint="@android:color/holo_green_light"
+            android:tint="@android:color/background_light"
             android:layout_marginRight="71dp"
             android:layout_marginEnd="71dp"
             android:layout_alignTop="@+id/floatingActionButton7"
             android:layout_alignRight="@+id/editText11"
-            android:layout_alignEnd="@+id/editText11" />
+            android:layout_alignEnd="@+id/editText11"
+            app:backgroundTint="#7bc8f3" />
 
     </RelativeLayout>
 </ScrollView>
