--- a/app/src/main/res/layout/activity_aula_professor.xml
+++ b/app/src/main/res/layout/activity_aula_professor.xml
@@ -28,98 +28,88 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:hint="Descrições da aula"
-            android:id="@+id/editText4"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_below="@+id/editText5"
-            android:layout_centerHorizontal="true" />
 
-        <EditText
+        <TextView
+            android:text="Tag_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editText12"
-            android:hint="Horas de aula fornecidas"
-            android:layout_marginTop="27dp"
-            android:layout_below="@+id/editText4"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="Nome da aula"
-            android:id="@+id/editText5"
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/toolbar"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_marginTop="17dp"
+            android:id="@+id/textView104"
+            android:textSize="18sp"
+            android:layout_below="@+id/textView103"
+            android:layout_alignRight="@+id/editText5"
+            android:layout_alignEnd="@+id/editText5"
+            android:layout_marginRight="21dp"
+            android:layout_marginEnd="21dp" />
 
         <TextView
             android:text="Tags de aula"
             android:layout_width="wrap_content"
-            android:id="@+id/textView3"
-            android:textSize="18sp"
-            android:layout_height="20dp"
-            android:layout_below="@+id/editText12"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editText133"
-            android:hint="Tag_1"
-            android:layout_marginTop="11dp"
-            android:layout_below="@+id/textView3"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editText144"
-            android:hint="Tag_2"
-            android:layout_below="@+id/editText133"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editText11"
-            android:hint="Preço por hora/aula"
-            android:layout_below="@+id/editText144"
+            android:id="@+id/textView103"
+            android:textSize="20sp"
+            android:layout_below="@+id/textView101"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="12dp" />
+            android:layout_marginTop="34dp" />
 
-        <android.support.design.widget.FloatingActionButton
+        <TextView
+            android:text="Preço"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            app:fabSize="normal"
-            app:srcCompat="@android:drawable/ic_delete"
-            android:layout_marginBottom="42dp"
-            android:id="@+id/floatingActionButton7"
-            android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/editText11"
-            android:layout_toEndOf="@+id/editText11"
-            android:layout_marginLeft="28dp"
-            android:layout_marginStart="28dp"
-            app:backgroundTint="#7bc8f3"
-            android:tint="@android:color/background_light" />
+            android:id="@+id/textView7"
+            android:textSize="20sp"
+            android:layout_below="@+id/textView105"
+            android:layout_alignRight="@+id/floatingActionButton8"
+            android:layout_alignEnd="@+id/floatingActionButton8"
+            android:layout_marginTop="46dp" />
+
+        <TextView
+            android:text="Tag_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView105"
+            android:textSize="20sp"
+            android:layout_marginTop="11dp"
+            android:layout_below="@+id/textView104"
+            android:layout_alignRight="@+id/floatingActionButton7"
+            android:layout_alignEnd="@+id/floatingActionButton7"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Horas de aula fornecidas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView101"
+            android:textSize="20sp"
+            android:layout_marginTop="27dp"
+            android:layout_below="@+id/textView102"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Descrições da aula"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView102"
+            android:textSize="20sp"
+            android:layout_marginTop="25dp"
+            android:layout_below="@+id/textView100"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Nome da aula"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView100"
+            android:textSize="20sp"
+
+            android:layout_marginTop="46dp"
+            android:layout_below="@+id/toolbar"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
@@ -129,12 +119,26 @@
             app:srcCompat="@android:drawable/ic_menu_edit"
             android:id="@+id/floatingActionButton8"
             android:tint="@android:color/background_light"
-            android:layout_marginRight="71dp"
-            android:layout_marginEnd="71dp"
+
+            app:backgroundTint="#7bc8f3"
             android:layout_alignTop="@+id/floatingActionButton7"
-            android:layout_alignRight="@+id/editText11"
-            android:layout_alignEnd="@+id/editText11"
-            app:backgroundTint="#7bc8f3" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            app:fabSize="normal"
+            app:srcCompat="@android:drawable/ic_delete"
+            android:id="@+id/floatingActionButton7"
+            app:backgroundTint="#7bc8f3"
+            android:tint="@android:color/background_light"
+
+            android:layout_marginTop="33dp"
+            android:layout_below="@+id/textView7"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
 </ScrollView>
