--- a/app/src/main/res/layout/activity_cadastrar_aula.xml
+++ b/app/src/main/res/layout/activity_cadastrar_aula.xml
@@ -7,9 +7,9 @@
     android:fillViewport="true">
     <RelativeLayout
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_interesses"
+        android:id="@+id/activity_cadastrar_aula"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".aula.gui.CadastrarAulaTutorActivity">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -47,7 +47,7 @@
         <EditText
             android:layout_width="match_parent"
             android:hint="Digite aqui as descrições da sua aula"
-            android:id="@+id/editText4"
+            android:id="@+id/editTextDescricao"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_below="@+id/editText5"
@@ -58,10 +58,10 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText12"
+            android:id="@+id/editTextHotasAssistidas"
             android:hint="Horas de aula fornecidas"
             android:layout_marginTop="27dp"
-            android:layout_below="@+id/editText4"
+            android:layout_below="@+id/editTextDescricao"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -93,7 +93,7 @@
             android:id="@+id/textView3"
             android:textSize="18sp"
             android:layout_height="20dp"
-            android:layout_below="@+id/editText12"
+            android:layout_below="@+id/editTextHotasAssistidas"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
