--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -63,7 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="149dp"
             android:hint="Digite aqui a sua bio"
-            android:id="@+id/editText4"
+            android:id="@+id/editTextDescricao"
             android:layout_below="@+id/editText5"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
@@ -73,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView3"
-            android:layout_below="@+id/editText4"
+            android:layout_below="@+id/editTextDescricao"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="24dp" />
