--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -37,7 +37,9 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/toolbar"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+
+            />
 
         <EditText
             android:layout_width="wrap_content"
