--- a/app/src/main/res/layout/textview_adapter.xml
+++ b/app/src/main/res/layout/textview_adapter.xml
@@ -2,7 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="10dp"
+    >
 
 
     <TextView
@@ -14,7 +15,12 @@
         android:layout_alignParentStart="true"
         android:id="@+id/name"
         android:textSize="15sp"
-        android:textColor="@android:color/background_dark" />
+        android:textColor="@android:color/background_dark"
+        android:focusableInTouchMode="false"
+        android:clickable="false"
+        android:focusable="false"
+        />
+
 
     <TextView
         android:text="Descrição"
@@ -26,7 +32,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textSize="12sp"
-        android:textColor="@android:color/background_dark" />
+        android:textColor="@android:color/background_dark"
+        android:focusableInTouchMode="false"
+        android:clickable="false"
+        android:focusable="false"/>
 
     <TextView
         android:text="30"
@@ -36,7 +45,10 @@
         android:textColor="@android:color/background_dark"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:focusableInTouchMode="false"
+        android:clickable="false"
+        android:focusable="false"/>
 
     <TextView
         android:text="30"
@@ -46,7 +58,10 @@
         android:textColor="@android:color/background_dark"
         android:layout_below="@+id/price"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:focusableInTouchMode="false"
+        android:clickable="false"
+        android:focusable="false"/>
 
     <TextView
         android:text="Preço:"
@@ -58,7 +73,10 @@
         android:layout_toLeftOf="@+id/price"
         android:layout_toStartOf="@+id/price"
         android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        android:focusableInTouchMode="false"
+        android:clickable="false"
+        android:focusable="false"/>
 
     <TextView
         android:text="Horas livres:"
@@ -68,5 +86,8 @@
         android:textColor="@android:color/background_dark"
         android:layout_below="@+id/textView11"
         android:layout_alignRight="@+id/textView11"
-        android:layout_alignEnd="@+id/textView11" />
+        android:layout_alignEnd="@+id/textView11"
+        android:focusableInTouchMode="false"
+        android:clickable="false"
+        android:focusable="false"/>
 </RelativeLayout>
