--- a/app/src/main/res/layout/activity_navegar.xml
+++ b/app/src/main/res/layout/activity_navegar.xml
@@ -12,8 +12,7 @@
         android:layout_height="match_parent"
         android:id="@+id/nav_view"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:menu="@menu/menu_navegar"/>
+        android:fitsSystemWindows="true"/>
 
 
 </android.support.v4.widget.DrawerLayout>
