--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -7,6 +7,6 @@
     android:fitsSystemWindows="true"
     tools:context=".usuario.gui.HomeActivity">
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_home" />
 
 </android.support.design.widget.CoordinatorLayout>
