--- a/app/src/main/res/layout/activity_aulas_compradas.xml
+++ b/app/src/main/res/layout/activity_aulas_compradas.xml
@@ -1,34 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ScrollView01"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_aulas_compradas"
+    android:fitsSystemWindows="true"
+    tools:context="ufrpe.edu.learnit.aula.gui.AulasCompradasActivity">
+
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#7bc8f3"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    <ScrollView
+        android:id="@+id/ScrollView01"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="ufrpe.edu.learnit.AulasCompradasActivity">
-        <android.support.v7.widget.Toolbar
+        android:fillViewport="true">
+        <RelativeLayout
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/activity_aulas_compradas"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#7bc8f3"
-            android:theme="?attr/actionBarTheme"
-            android:minHeight="?attr/actionBarSize"
-            android:layout_alignParentTop="true"
-            android:id="@+id/toolbar2"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            tools:context="ufrpe.edu.learnit.aula.gui.AulasCompradasActivity"
+            tools:ignore="ScrollViewSize">
 
-        <TextView
-            android:text="Aulas Compradas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/toolbar2"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="18dp"
-            android:id="@+id/textView2"
-            android:textSize="36sp" />
-    </RelativeLayout>
-</ScrollView>
+
+            <TextView android:text="Minhas Aulas Compradas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewNome"
+                android:textSize="28sp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:textColor="@android:color/background_light" />
+
+            <ListView
+                android:id="@+id/listViewMinhasAulas"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/textViewNome"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="15dp" />
+
+        </RelativeLayout>
+    </ScrollView>
+</android.support.design.widget.CoordinatorLayout>
